# Minecraft-Resourcespack-Editor

./: .gitignore  CHANGELOG.md  README.md  credits.md  index.html  package.json  vite.config.ts
.github/scripts/: generate-updater-gitee.cjs  sync-gitee-release.cjs
.github/workflows/: release.yml
public/sounds/translate/: sounds.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  download_manager.rs  history_manager.rs  image_handler.rs  lib.rs  main.rs  minecraft_data.rs  pack_creator.rs  pack_parser.rs  preloader.rs  version_converter.rs  version_downloader.rs  web_server.rs  zip_handler.rs
src/components/: AudioHoverPlayer.css  AudioHoverPlayer.tsx  CanvasSyntaxHighlighter.tsx  CreatePackModal.css  CreatePackModal.tsx  DOMSyntaxHighlighter.tsx  DownloadIndicator.css  DownloadIndicator.tsx  DownloadSettingsDialog.tsx  HighPerformanceCanvasHighlighter.tsx  Icons.tsx  ImageViewer.css  ImageViewer.tsx  MonacoEditor.css  MonacoEditor.tsx  PackEditor.css  PackEditor.tsx  PackMetaEditor.css  PackMetaEditor.tsx  PngCreatorDialog.css  PngCreatorDialog.tsx  SearchModal.css  SearchModal.tsx  SoundCreatorDialog.css  SoundCreatorDialog.tsx  SyntaxHighlighter.css  SyntaxHighlighter.tsx  TextEditor.css  TextEditor.tsx  TitleBar.css  TitleBar.tsx  VersionConverterModal.css  VersionConverterModal.tsx
src/types/: pack.ts
src/utils/: drawing-engine.ts  gpu-canvas.ts  image-cache.ts  tauri-api.ts  updater.ts  version-map.ts  worker-pool.ts
src/workers/: image-worker.ts  syntax-worker.ts
version_map/: fetch_pack_format.py  version_map.json
